--- a/index.html
+++ b/index.html
@@ -11,7 +11,44 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Primary Meta Tags -->
     <title>Portafolio</title>
+    <meta name="title" content="Portafolio" />
+    <meta
+      name="description"
+      content="Portafolio Profesionar Ing.Daniel Yulbriner Silva Valencia."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://portafolio26-react.vercel.app/" />
+    <meta property="og:title" content="Portafolio" />
+    <meta
+      property="og:description"
+      content="Portafolio Profesionar Ing.Daniel Yulbriner Silva Valencia."
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://portafolio26-react.vercel.app/"
+    />
+    <meta property="twitter:title" content="Portafolio" />
+    <meta
+      property="twitter:description"
+      content="Portafolio Profesionar Ing.Daniel Yulbriner Silva Valencia."
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/images/meta-tags.png"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
   </head>
   <body>
     <div id="root"></div>
