add image portfolio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content="https://postimg.cc/Q9d597fS"
     />
 
     <!-- X (Twitter) -->
@@ -45,7 +45,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://metatags.io/images/meta-tags.png"
+      content=https://postimg.cc/Q9d597fS"
     />
 
     <!-- Meta Tags Generated with https://metatags.io -->
