add image 2 metatag

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://postimg.cc/Q9d597fS"
+      content="https://i.postimg.cc/Qtpqzk1L/portafolio.png"
     />
 
     <!-- X (Twitter) -->
@@ -45,7 +45,7 @@
     />
     <meta
       property="twitter:image"
-      content=https://postimg.cc/Q9d597fS"
+      content=https://i.postimg.cc/Qtpqzk1L/portafolio.png"
     />
 
     <!-- Meta Tags Generated with https://metatags.io -->
